--- a/Practice1/Assignment1.ipynb
+++ b/Practice1/Assignment1.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Practice - Linear Regression\n",
+    "\n",
+    "Github Link : https://github.com/heartcored98/CH485_AI_Chemistry/blob/master/Practice1/Assignment1.ipynb\n",
+    "\n",
     "This notebook would demonstrate the **linear regression** with sklearn package on diabetes dataset. **Firstly,** basic one variable linear regression were conducted among ten variables, plotting the data distribution with regression line. **Secondly,** linear regression with two features were conducted. **Lastly,** 10 variables linear regression was conducted. With thoese experiments, corresponding coefficient, mean squared error and r2 value were calculated."
    ]
   },
