Clean up markdown and code

--- a/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
+++ b/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reference : http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedKFold.html#sklearn.model_selection.StratifiedKFold"
+    "Reference : http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedKFold.html#sklearn.model_selection.StratifiedKFold  \n"
    ]
   },
   {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,11 @@
     "    if args.kernel == 'linear':\n",
     "        model = LinearSVC(C=args.C)\n",
     "    else:\n",
-    "        model = SVC(C=args.C, kernel=args.kernel, gamma=args.gamma, verbose=False, probability=False)\n",
+    "        model = SVC(C=args.C, \n",
+    "                    kernel=args.kernel, \n",
+    "                    gamma=args.gamma, \n",
+    "                    verbose=False, \n",
+    "                    probability=False)\n",
     "    model = train(x_train, y_train, model, args)\n",
     "    accu, roc_auc, fpr, tpr = evaluate(x_test, y_test, model, args)\n",
     "    return accu, roc_auc, fpr, tpr"
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
