Update notebook description and result explanation

--- a/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
+++ b/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
@@ -1,14 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction  \n",
+    "\n",
+    "In this jupyter notebook, a toxicity of the molecular will be classified with the Support Vector Machine(SVM) on `Tox21` dataset.  \n",
+    "`Tox21` dataset consists of molecular smile strings as inputs and binary labels as outputs.  \n",
+    "\n",
+    "This notebook has following features  \n",
+    "- Convert smile string into **Morgan Fingerprints**(error handling enabled) with `RDkit`  \n",
+    "- Synthesis **insufficient class data** by `imblearn SMOTE` algorithm in order to handle class imbalanced dataset \n",
+    "- Support data spliting for **K-fold vallidation** process easily\n",
+    "- Support optimized `LinearSVC` when **linear** kernel is selected  \n",
+    "- Train and test multiple experiments of various hyperparameter sets **in parallel** with `multiprocessing Pool`\n",
+    "- Manage experiment and model **hyperparameters** at once with `argparse`  \n",
+    "- **Visualize** experiment results with minimal changes of codes with `seaborn` and `pandas Dataframe`  \n",
+    "\n",
+    "Throughout the notebook, there are **5** experiments with following investigation purpose.  \n",
+    "Note that **classification performance** includes _binary classification accuracy_ and _roc-auc metric._  \n",
+    "1. Influence of the **fingerprint dimension** toward **classification performance**.  \n",
+    "2. Influence of the **kernel** in the SVC model toward **classification performance**.  \n",
+    "3. Influence of the **C** coefficient toward **classification performance** among different **kernels**.  \n",
+    "4. Influence of the **gamma** coefficient toward **classification performance** among different **kernels**.  \n",
+    "5. Influence of the **C** and **gamma** coefficients toward **classification performance**.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import multiprocessing as mp\n",
     "from copy import deepcopy\n",
+    "import argparse\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,11 +48,10 @@
     "from sklearn.metrics import roc_auc_score, roc_curve, auc, accuracy_score\n",
     "from imblearn.over_sampling import SMOTE\n",
     "import pandas as pd\n",
-    "import argparse\n",
-    "from tqdm import tqdm_notebook\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from utils import read_data\n",
+    "\n",
     "\n",
     "parser = argparse.ArgumentParser()\n",
     "args = parser.parse_args(\"\")\n",
@@ -50,7 +77,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare Dataset by Generating Molecular Fingerprints"
+    "# Prepare Dataset by Generating Molecular Fingerprints  \n",
+    "\n",
+    "Since the molecular information is provided within `smile` string form, we need to convert this strings into fixed-dimension feature vector. \n",
+    "For this purpose, a **Morgan Fingerprints** methods was very suitable as it produces fixed-size vector with given dimension while capturing chemical information as well.  \n",
+    "\n",
+    "You can produce fingerprint with specified dimension with arguments `nBits`  \n",
+    "Also, there are some `smile` string which cannot be converted into fingerprints so we excluded them during dataset preparation.  \n",
+    "\n",
+    "`RDkit` Fingerprint Ref : http://www.rdkit.org/docs/GettingStartedInPython.html#morgan-fingerprints-circular-fingerprints"
    ]
   },
   {
@@ -90,14 +125,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing ROC Curve"
+    "# Visualizing ROC Curve  \n",
+    "\n",
+    "Following code could be used to plot the ROC curve for one experiments.  \n",
+    "However, we did not use this function since this notebook handles dozen of experiments simultaneously."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reference : http://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html#sphx-glr-auto-examples-model-selection-plot-roc-py"
+    "`sklearn` ROC curve Ref : http://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html#sphx-glr-auto-examples-model-selection-plot-roc-py"
    ]
   },
   {
@@ -126,21 +164,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment Template"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Reference : http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedKFold.html#sklearn.model_selection.StratifiedKFold  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training and Evaluating Model"
+    "# Experiment Template  \n",
+    "\n",
+    "This section includes template code for launching individual experiments with given hyperparameters and experiment settings such as kernel type, C, gamma, fingerprint dimension, number of dataset fold and etc.  \n",
+    "\n",
+    "- Data synthesis for insufficient class is shown during k-folding dataset.   \n",
+    "- Also, it includes function to execute each experiments in subprocess in order to maximize system resource utlization.\n",
+    "- `args` object contains all the hyperparameters and experiments settings to control the experiments.  \n",
+    "\n",
+    "sklearn `k-fold` Ref : http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedKFold.html#sklearn.model_selection.StratifiedKFold  \n",
+    "`apply_async` Ref : https://stackoverflow.com/questions/8533318/multiprocessing-pool-when-to-use-apply-apply-async-or-map  \n",
+    "Using `SMOTE` Ref : https://beckernick.github.io/oversampling-modeling/\n"
    ]
   },
   {
@@ -349,6 +383,30 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result and Discussion  \n",
+    "\n",
+    "Above figures shows accuracy and roc-auc value change over dimension of the fingerprints.  \n",
+    "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
+    "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "\n",
+    "Experiment Settings. \n",
+    "- Tested dimensions were [1, 4, 16, 64, 256, 1024, 2048, 4096] and higher dimensions were not tested since it took long computation time.  \n",
+    "- All 12 toxicity types were tested in order to observe the general effect of vector size.  \n",
+    "- A linear kernel was used due to its superior computation speed. C and gamma value were selected as 1.0 and 1/n_feature, respectively. \n",
+    "- All results were derived from the 5-fold valdiation process  \n",
+    "\n",
+    "Notable Results.  \n",
+    "- Both accuracy and roc-auc are increased while the dimension of the fingerprints increase. \n",
+    "- When vector size is 1 and 4, auc-roc is almost 0.5 which means that the classifier cannot distinguish the input which is reasonable result since too many information are condensed into just few elements.  \n",
+    "- It is notable that accuracy and roc-auc were around 0.9 when vector size is more than 2048 without any hyperparameter optimization \n",
+    "\n",
+    "We can see that generally, "
    ]
   },
   {
@@ -623,7 +681,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment5. Simultaneous Effect of 'gamma' and 'C' coef of SVC\n"
+    "# Experiment5. Simultaneous Effect of 'gamma' and 'C' coef of SVC\n",
+    "\n",
+    "Gamma and C Ref : http://scikit-learn.org/stable/auto_examples/svm/plot_rbf_parameters.html"
    ]
   },
   {
@@ -714,13 +774,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(5)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
