Update notebook description done to experiment #3

--- a/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
+++ b/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "# Introduction  \n",
     "\n",
-    "In this jupyter notebook, a toxicity of the molecular will be classified with the Support Vector Machine(SVM) on `Tox21` dataset.  \n",
-    "`Tox21` dataset consists of molecular smile strings as inputs and binary labels as outputs.  \n",
+    "In this jupyter notebook, a toxicity of the molecular will be classified with the Support Vector Machine(SVM) on **Tox21** dataset.  \n",
+    "**Tox21** dataset consists of molecular smile strings as inputs and binary labels as outputs.  \n",
     "\n",
     "This notebook has following features  \n",
-    "- Convert smile string into **Morgan Fingerprints**(error handling enabled) with `RDkit`  \n",
-    "- Synthesis **insufficient class data** by `imblearn SMOTE` algorithm in order to handle class imbalanced dataset \n",
-    "- Support data spliting for **K-fold vallidation** process easily\n",
-    "- Support optimized `LinearSVC` when **linear** kernel is selected  \n",
-    "- Train and test multiple experiments of various hyperparameter sets **in parallel** with `multiprocessing Pool`\n",
-    "- Manage experiment and model **hyperparameters** at once with `argparse`  \n",
-    "- **Visualize** experiment results with minimal changes of codes with `seaborn` and `pandas Dataframe`  \n",
+    "- Convert smile string into _Morgan Fingerprints_(error handling enabled) with **RDkit**  \n",
+    "- Synthesis _insufficient class data_ by **imblearn SMOTE** algorithm in order to handle class imbalanced dataset \n",
+    "- Support data spliting for _K-fold vallidation_ process easily\n",
+    "- Support optimized **LinearSVC** when **linear** kernel is selected  \n",
+    "- Train and test multiple experiments of various hyperparameter sets _in parallel_ with **multiprocessing Pool**\n",
+    "- Manage experiment and model _hyperparameters_ at once with **argparse**  \n",
+    "- _Visualize_ experiment results with minimal changes of codes with **seaborn** and **pandas Dataframe**  \n",
     "\n",
     "Throughout the notebook, there are **5** experiments with following investigation purpose.  \n",
     "Note that **classification performance** includes _binary classification accuracy_ and _roc-auc metric._  \n",
@@ -79,11 +79,11 @@
    "source": [
     "# Prepare Dataset by Generating Molecular Fingerprints  \n",
     "\n",
-    "Since the molecular information is provided within `smile` string form, we need to convert this strings into fixed-dimension feature vector. \n",
+    "Since the molecular information is provided within **smile** string form, we need to convert this strings into fixed-dimension feature vector. \n",
     "For this purpose, a **Morgan Fingerprints** methods was very suitable as it produces fixed-size vector with given dimension while capturing chemical information as well.  \n",
     "\n",
-    "You can produce fingerprint with specified dimension with arguments `nBits`  \n",
-    "Also, there are some `smile` string which cannot be converted into fingerprints so we excluded them during dataset preparation.  \n",
+    "You can produce fingerprint with specified dimension with arguments **nBits**  \n",
+    "Also, there are some **smile** string which cannot be converted into fingerprints so we excluded them during dataset preparation.  \n",
     "\n",
     "`RDkit` Fingerprint Ref : http://www.rdkit.org/docs/GettingStartedInPython.html#morgan-fingerprints-circular-fingerprints"
    ]
@@ -128,14 +128,9 @@
     "# Visualizing ROC Curve  \n",
     "\n",
     "Following code could be used to plot the ROC curve for one experiments.  \n",
-    "However, we did not use this function since this notebook handles dozen of experiments simultaneously."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`sklearn` ROC curve Ref : http://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html#sphx-glr-auto-examples-model-selection-plot-roc-py"
+    "However, we did not use this function since this notebook handles dozen of experiments simultaneously.  \n",
+    "\n",
+    "**sklearn** ROC curve Ref : http://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html#sphx-glr-auto-examples-model-selection-plot-roc-py"
    ]
   },
   {
@@ -170,11 +165,11 @@
     "\n",
     "- Data synthesis for insufficient class is shown during k-folding dataset.   \n",
     "- Also, it includes function to execute each experiments in subprocess in order to maximize system resource utlization.\n",
-    "- `args` object contains all the hyperparameters and experiments settings to control the experiments.  \n",
+    "- **args** object contains all the hyperparameters and experiments settings to control the experiments.  \n",
     "\n",
-    "sklearn `k-fold` Ref : http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedKFold.html#sklearn.model_selection.StratifiedKFold  \n",
-    "`apply_async` Ref : https://stackoverflow.com/questions/8533318/multiprocessing-pool-when-to-use-apply-apply-async-or-map  \n",
-    "Using `SMOTE` Ref : https://beckernick.github.io/oversampling-modeling/\n"
+    "sklearn **k-fold** Ref : http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedKFold.html#sklearn.model_selection.StratifiedKFold  \n",
+    "**apply_async** Ref : https://stackoverflow.com/questions/8533318/multiprocessing-pool-when-to-use-apply-apply-async-or-map  \n",
+    "Using **SMOTE** Ref : https://beckernick.github.io/oversampling-modeling/\n"
    ]
   },
   {
@@ -301,9 +296,9 @@
    "source": [
     "In this experiment, molecular fingerprints would be calculated with different nbits values. If the value of the nbits is too low, then fingerprint vector would not represent important information. Otherwise, if the value of the nbits is too high, then fingerprint vector would be sparse so that model would less capture important feature from the fingerprint vector  \n",
     "\n",
-    "Data Handling Ref : http://pbpython.com/pandas-list-dict.html  \n",
-    "Linear SVC Ref : http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVC.html  \n",
-    "SVC Ref : http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html"
+    "**Pandas Dataframe** construction Ref : http://pbpython.com/pandas-list-dict.html  \n",
+    "**Linear SVC** Ref : http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVC.html  \n",
+    "**SVC** Ref : http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html"
    ]
   },
   {
@@ -395,18 +390,16 @@
     "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
     "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
     "\n",
-    "Experiment Settings. \n",
+    "**Experiment Settings.**   \n",
     "- Tested dimensions were [1, 4, 16, 64, 256, 1024, 2048, 4096] and higher dimensions were not tested since it took long computation time.  \n",
     "- All 12 toxicity types were tested in order to observe the general effect of vector size.  \n",
     "- A linear kernel was used due to its superior computation speed. C and gamma value were selected as 1.0 and 1/n_feature, respectively. \n",
     "- All results were derived from the 5-fold valdiation process  \n",
     "\n",
-    "Notable Results.  \n",
+    "**Notable Results.**    \n",
     "- Both accuracy and roc-auc are increased while the dimension of the fingerprints increase. \n",
     "- When vector size is 1 and 4, auc-roc is almost 0.5 which means that the classifier cannot distinguish the input which is reasonable result since too many information are condensed into just few elements.  \n",
-    "- It is notable that accuracy and roc-auc were around 0.9 when vector size is more than 2048 without any hyperparameter optimization \n",
-    "\n",
-    "We can see that generally, "
+    "- It is notable that accuracy and roc-auc were around 0.9 when vector size is more than 2048 without any hyperparameter optimization "
    ]
   },
   {
@@ -449,7 +442,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -490,6 +485,28 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result and Discussion  \n",
+    "\n",
+    "Above figures shows accuracy and roc-auc value change over type of the kernel.  \n",
+    "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
+    "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "\n",
+    "**Experiment Settings.**  \n",
+    "- Tested kernel were ['linear', 'poly', 'rbf', 'sigmoid'].  \n",
+    "- All 12 toxicity types were tested in order to observe the general effect of kernel type.  \n",
+    "- 64 dimension was selected for the fingerprint vector size in order to reduce the experiment time.  \n",
+    "- Default C and gamma value were selected as 1.0 and 1/n_feature, respectively. \n",
+    "- All results were derived from the 5-fold valdiation process  \n",
+    "\n",
+    "**Notable Results.**  \n",
+    "- The performance of accuracy and roc-auc were decreased in order of 'rbf' > 'poly' > 'linear' > 'sigmoid'. \n",
+    "- The order of the performance among different tox_type was almost consisent aganist the kernel type that it might  imply each tox_type dataset has it own data complexity.  "
    ]
   },
   {
@@ -588,6 +605,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Result and Discussion  \n",
+    "\n",
+    "Above figures shows accuracy and roc-auc value change over C value.  \n",
+    "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
+    "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "\n",
+    "**Experiment Settings.**  \n",
+    "- Tested C values were [1,4,7,10,13,16,19,22,25,28,31,34,37].  \n",
+    "- 4 kernel types: ['linear', 'poly', 'rbf', 'sigmoid'] were tested in order to observe the general effect of C towrad a kernel type.  \n",
+    "- 64 dimension was selected for the fingerprint vector size in order to reduce the experiment time.  \n",
+    "- Default gamma value were selected as 1/n_feature. \n",
+    "- All results were derived from the 5-fold valdiation process  \n",
+    "\n",
+    "**Notable Results.**  \n",
+    "- In 'poly' and 'rbf' the performance of accuracy and roc-auc were increased with C value. \n",
+    "- On the other hands, in 'sigmoid', 'linear' the accuracy was unstable with C value.  \n",
+    "- In 'sigmoid', 'linear' the roc-auc seems decreased with C value. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Experiment4. Effect of 'gamma' coef of SVC"
    ]
   },
@@ -675,6 +715,29 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result and Discussion  \n",
+    "\n",
+    "Above figures shows accuracy and roc-auc value change over C value.  \n",
+    "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
+    "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "\n",
+    "**Experiment Settings.**  \n",
+    "- Tested C values were [1,4,7,10,13,16,19,22,25,28,31,34,37].  \n",
+    "- 4 kernel types: ['linear', 'poly', 'rbf', 'sigmoid'] were tested in order to observe the general effect of C towrad a kernel type.  \n",
+    "- 64 dimension was selected for the fingerprint vector size in order to reduce the experiment time.  \n",
+    "- Default gamma value were selected as 1/n_feature. \n",
+    "- All results were derived from the 5-fold valdiation process  \n",
+    "\n",
+    "**Notable Results.**  \n",
+    "- In 'poly' and 'rbf' the performance of accuracy and roc-auc were increased with C value. \n",
+    "- On the other hands, in 'sigmoid', 'linear' the accuracy was unstable with C value.  \n",
+    "- In 'sigmoid', 'linear' the roc-auc seems decreased with C value. "
    ]
   },
   {
