Complete whole notebook description with result discussion. TOOD: - add timeout function - argument contain experiment name - log the experiment result on hard drive for future importing   (maybe with pickle)

--- a/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
+++ b/Practice2 - SVM/Assignment2_Tox21_SVM.ipynb
@@ -609,13 +609,15 @@
     "\n",
     "Above figures shows accuracy and roc-auc value change over C value.  \n",
     "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
-    "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "The figures in the middel row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "The figure in the lower row is plotted with heatmap to deliver execution time.  \n",
     "\n",
     "**Experiment Settings.**  \n",
     "- Tested C values were [1,4,7,10,13,16,19,22,25,28,31,34,37].  \n",
     "- 4 kernel types: ['linear', 'poly', 'rbf', 'sigmoid'] were tested in order to observe the general effect of C towrad a kernel type.  \n",
     "- 64 dimension was selected for the fingerprint vector size in order to reduce the experiment time.  \n",
-    "- Default gamma value were selected as 1/n_feature. \n",
+    "- Default gamma value was selected as 1/n_feature. \n",
+    "- Only tested with 'nr-ahr' tox_type. \n",
     "- All results were derived from the 5-fold valdiation process  \n",
     "\n",
     "**Notable Results.**  \n",
@@ -723,21 +725,23 @@
    "source": [
     "## Result and Discussion  \n",
     "\n",
-    "Above figures shows accuracy and roc-auc value change over C value.  \n",
+    "Above figures shows accuracy and roc-auc value change over gamma value.  \n",
     "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
-    "The figures in the lower row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "The figures in the middel row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "The figure in the lower row is plotted with heatmap to deliver execution time.  \n",
     "\n",
     "**Experiment Settings.**  \n",
-    "- Tested C values were [1,4,7,10,13,16,19,22,25,28,31,34,37].  \n",
-    "- 4 kernel types: ['linear', 'poly', 'rbf', 'sigmoid'] were tested in order to observe the general effect of C towrad a kernel type.  \n",
+    "- Tested C values were 10^[-4, -3, -2, -1, 0, 1, 2, 3, 4].  \n",
+    "- 3 kernel types: ['poly', 'rbf', 'sigmoid'] were tested in order to observe the general effect of gamma towrad a kernel type('linear' was excluded since it does not have gamma parameter).  \n",
     "- 64 dimension was selected for the fingerprint vector size in order to reduce the experiment time.  \n",
-    "- Default gamma value were selected as 1/n_feature. \n",
+    "- Default C value was selected as 1.0. \n",
+    "- Only tested with 'nr-ahr' tox_type. \n",
     "- All results were derived from the 5-fold valdiation process  \n",
     "\n",
     "**Notable Results.**  \n",
-    "- In 'poly' and 'rbf' the performance of accuracy and roc-auc were increased with C value. \n",
-    "- On the other hands, in 'sigmoid', 'linear' the accuracy was unstable with C value.  \n",
-    "- In 'sigmoid', 'linear' the roc-auc seems decreased with C value. "
+    "- Overally, there were some interval of the gamma value where the performance is maximized for each kernel type.  \n",
+    "- For example, 'poly' and 'rbf' were maximized around 0.1~10.0 and 'sigmoid' was maximized around 0.01.  \n",
+    "- 'sigmoid' was worst kernel type. "
    ]
   },
   {
@@ -839,14 +843,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Result and Discussion  \n",
+    "\n",
+    "Above figures shows accuracy and roc-auc value change over gamma and C value.  \n",
+    "The figures in the upper row are plotted with line-chart to deliver the tendency among variables.  \n",
+    "The figures in the middel row are plotted with heatmap to deliver exact accuracy and roc-auc value.  \n",
+    "The figure in the lower row is plotted with heatmap to deliver execution time.  \n",
+    "\n",
+    "**Experiment Settings.**\n",
+    "- Tested C values were 4^[-4, -3, -2, -1, 0, 1, 2, 3].  \n",
+    "- Tested gamma values were 5^[-3, -2, -1, 0, 1, 2, 3].\n",
+    "- Best performing 'rbf' kernel was selected.  \n",
+    "- 64 dimension was selected for the fingerprint vector size in order to reduce the experiment time.  \n",
+    "- Only tested with 'nr-ahr' tox_type. \n",
+    "- All results were derived from the 5-fold valdiation process  \n",
+    "\n",
+    "**Notable Results.**  \n",
+    "- It is worth to pay attention to the figures in the middle row. There are **highlighted** area with in the middle of the heatmap.\n",
+    "- It is observable that accuracy is maximized at C: 1.0~4.0 and gamma: 0.2~25.0 and the roc-auc is maximized at C: 0.0625~0.25 and gamma: 0.2~1.0.    \n",
+    "- Suprisingly, the model achieves 96% on binary classification with 0.96 roc-auc area value with only 64 dimension finger prints with hyperparameter grid searching!  "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Possible Improvements\n",
+    "\n",
+    "1. Fine tune the model with Hyperparameter Searching Tool.   \n",
+    "2. Increase the dimension of the fingerprints to encode sufficient information.  \n",
+    "3. Applying different data augumentation method except SMOTE.  "
+   ]
   }
  ],
  "metadata": {
