--- a/Practice2_Tox21_SVM/Assignment2_Tox21_SVM.ipynb
+++ b/Practice2_Tox21_SVM/Assignment2_Tox21_SVM.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Introduction  \n",
     "\n",
+    "Github Link : \n",
+    "\n",
     "In this jupyter notebook, a toxicity of the molecular will be classified with the Support Vector Machine(SVM) on **Tox21** dataset.  \n",
     "**Tox21** dataset consists of molecular smile strings as inputs and binary labels as outputs.  \n",
     "\n",
