Add github link

--- a/Practice2_Tox21_SVM/Assignment2_Tox21_SVM.ipynb
+++ b/Practice2_Tox21_SVM/Assignment2_Tox21_SVM.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Introduction  \n",
     "\n",
-    "Github Link : \n",
+    "**!Recommend to view the notebook on Github!**  \n",
+    "Github Link : https://github.com/heartcored98/CH485_AI_Chemistry/blob/master/Practice2_Tox21_SVM/Assignment2_Tox21_SVM.ipynb\n",
     "\n",
     "In this jupyter notebook, a toxicity of the molecular will be classified with the Support Vector Machine(SVM) on **Tox21** dataset.  \n",
     "**Tox21** dataset consists of molecular smile strings as inputs and binary labels as outputs.  \n",
