Test subprocess leaking problem

--- a/Practice3_Tox21_MLP/Assignment3_Tox21_MLP.ipynb
+++ b/Practice3_Tox21_MLP/Assignment3_Tox21_MLP.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,23 +109,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'train': <utils.myDataset object at 0x7f8ca3665b00>, 'val': <utils.myDataset object at 0x7f8ca3665978>, 'test': <utils.myDataset object at 0x7f8ca3665ac8>}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dict_partition['nr-ahr'])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,20 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Test code to construct MLP classifier \\nargs.input_dim = 2048\\nargs.hidden_dim = 256\\nargs.output_dim = 1\\nargs.dropout_rate = 0.2\\nargs.n_layer = 3\\nmodel = construct_model(args)\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" Test code to construct MLP classifier \n",
     "args.input_dim = 2048\n",
@@ -222,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,30 +323,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def subproc_experiment(args):\n",
     "    ts = time.time()\n",
+    "    \n",
     "    list_partition = args.list_partition\n",
     "    acc_mean, acc_std = kfold_experiment(list_partition, args)\n",
     "    te = time.time()\n",
-    "    \n",
+    "    \"\"\"\n",
     "    result = {\"acc_mean\":acc_mean, \"acc_std\":acc_std, 'elapsed':te-ts}\n",
     "    temp_args = vars(args)\n",
-    "#     del temp_args['dataset']\n",
+    "    del temp_args['list_partition']\n",
     "    result.update(temp_args)\n",
-    "    return result\n",
+    "    \"\"\"\n",
+    "    return args\n",
     "    \n",
     "def callback_experiment(result):\n",
+    "    \"\"\"\n",
     "    result = deepcopy(result)    \n",
     "    output = \"Acc Mean: {:0.3f} Acc STD: {:0.3f} Elapsed: {:3.1f}\"\n",
     "    output = output.format(result['acc_mean'],\n",
     "                           result['acc_std'],\n",
     "                           result['elapsed'])\n",
     "    print(output)\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    print(result)\n",
     "    global exp_data\n",
     "    list_experiments = exp_data.get(args.exp_name, [])\n",
     "    list_experiments.append(result)"
@@ -389,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,9 +379,36 @@
     "args.optim = 'ADAM'\n",
     "args.epoch = 30\n",
     "args.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "\n",
-    "list_partition = dict_partition['nr-ahr']\n",
-    "accu = kfold_experiment(list_partition, args)"
+    "args.exp_name = 'exp_test'\n",
+    "args.list_partition = dict_partition['nr-ahr']\n",
+    "result = subproc_experiment(args)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc Mean: 0.944 Acc STD: 0.000 Elapsed: 5.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "callback_experiment(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(result)\n",
+    "print(exp_data)"
    ]
   },
   {
@@ -428,30 +431,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'train': <utils.myDataset object at 0x7f949c865c18>, 'val': <utils.myDataset object at 0x7f949c865ba8>, 'test': <utils.myDataset object at 0x7f949c865d30>}]\n",
+      "CPU times: user 58.8 ms, sys: 665 ms, total: 723 ms\n",
+      "Wall time: 1.1 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
+    "args.exp_name = 'exp_hidden_dim'\n",
+    "args.input_dim = 2048\n",
+    "args.output_dim = 1\n",
+    "args.n_layer = 2\n",
+    "args.dropout_rate = 0.2\n",
+    "args.lr = 0.01\n",
+    "args.l2_coef = 0\n",
+    "args.optim = 'ADAM'\n",
+    "args.epoch = 30\n",
+    "args.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "args.seed = 123\n",
-    "args.C = 1.0\n",
-    "args.gamma = 'auto'\n",
-    "args.n_splits = 5\n",
-    "args.exp_name = 'exp_nbits'\n",
-    "\n",
-    "exp_data['exp_nbits'] = list()\n",
-    "list_nbits = [1, 4, 16, 64, 256, 1024, 2048, 4096]#, 8192]\n",
+    "exp_data['exp_hidden_dim'] = list()\n",
+    "list_hidden_dim = [32] #,128,512, 2048]#, 8192]\n",
     "\n",
     "pool = mp.Pool(processes=14)\n",
-    "for tox_type in list_tox_type[:]:\n",
-    "    for nbits in list_nbits:\n",
+    "for tox_type in list_tox_type[:1]:\n",
+    "    for hidden_dim in list_hidden_dim:\n",
     "        args.tox_type = tox_type\n",
-    "        args.nbits = nbits\n",
-    "        pool.apply_async(subproc_experiment, args = (deepcopy(args),), callback=callback_experiment)\n",
+    "        args.hidden_dim = hidden_dim\n",
+    "        args.list_partition = dict_partition[tox_type]\n",
+    "        pool.apply_async(subproc_experiment, args = (args,), callback=callback_experiment)\n",
     "\n",
     "pool.close()\n",
     "pool.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(exp_data['exp_hidden_dim'])"
    ]
   },
   {
@@ -462,8 +497,8 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(exp_data['exp_nbits'])\n",
-    "df = df[['accu', 'roc_auc', 'nbits', 'tox_type']]\n",
+    "df = pd.DataFrame(exp_data['exp_hidden_dim'])\n",
+    "df = df[['acc_mean', 'acc_std', 'elapsed', 'tox_type', 'hidden_dim']]\n",
     "\n",
     "fig, ax = plt.subplots(2, 2)\n",
     "fig.set_size_inches(15, 10)\n",
@@ -471,12 +506,13 @@
     "\n",
     "sns.set_style(\"darkgrid\", {\"axes.facecolor\": \".9\"})\n",
     "\n",
-    "grid = sns.lineplot(x=\"nbits\", y=\"accu\", hue=\"tox_type\", markers=True, data=df, ax=ax[0][0])\n",
-    "grid.set_title(\"Accuracy vs nbits\")\n",
+    "grid = sns.lineplot(x=\"hidden_dim\", y=\"acc_mean\", hue=\"tox_type\", markers=True, data=df, ax=ax[0][0])\n",
+    "grid.set_title(\"Accuracy vs hidden_dim\")\n",
     "grid.set(xscale=\"log\")\n",
     "grid.grid(True)\n",
     "\n",
-    "grid = sns.lineplot(x=\"nbits\", y=\"roc_auc\", hue=\"tox_type\", data=df, ax=ax[0][1])\n",
+    "\"\"\"\n",
+    "grid = sns.lineplot(x=\"hidden_dim\", y=\"acc_mean\", hue=\"tox_type\", data=df, ax=ax[0][1])\n",
     "grid.set_title(\"ROC-AUC vs nbits\")\n",
     "grid.set(xscale=\"log\")\n",
     "grid.grid(True)\n",
@@ -488,7 +524,7 @@
     "df_roc_auc = df.pivot(index='tox_type', columns='nbits', values='roc_auc')\n",
     "grid = sns.heatmap(df_roc_auc, annot=True, ax=ax[1][1])\n",
     "grid.set_title(\"ROC-AUC\")\n",
-    "\n",
+    "\"\"\"\n",
     "plt.tight_layout()\n",
     "plt.grid(True)"
    ]
